# AdventOfCode2023

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  rustfmt.toml
.github/workflows/: pages.yml
aoc_derive/: Cargo.toml
aoc_derive/src/: examples.rs  lib.rs  runner.rs  scanner.rs  visual.rs
benches/: main.rs
inputs/: day07.solution1.txt  day07.solution2.txt  day11.solution1.txt  day11.solution2.txt  day12.solution2.txt  day19.solution2.txt  day20.solution1.txt  day20.solution2.txt  day21.solution2.txt  day24.solution2.txt  day25.solution1.txt
src/: cli.rs  derived.rs  examples.rs  lib.rs  main.rs  parse.rs  point.rs  runner.rs  utils.rs
src/cli/: bench.rs  mod.rs  multi.rs  runner.rs  single.rs  source.rs
src/utils/: matrix.rs  mod.rs  parse.rs  parser.rs
src/utils/ext/: iter.rs  mod.rs  range.rs
src/visual/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .eslintrc.cjs  bootstrap.js  dprint.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/public/: index.html  patch-coop-coep.js
web/src/: Day.tsx  Result.tsx  Root.tsx  context.ts  index.tsx  worker.ts
