[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.0.0"

[dependencies]
ansi_term = "0.12.1"
derive-new = "0.5"
aoc_derive = { path = "./aoc_derive" }
common_macros = "0.1.1"
paste = "1.0.14"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# There's a lot of casting between different numeric types in this project. In most cases the possible ranges of these are pretty well understood, and as such most of these concerns are unfounded and just add clutter.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
