[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.0.0"

[dependencies]
ansi_term = "0.12.1"
derive-new = "0.5"
aoc_derive = { path = "./aoc_derive" }
common_macros = "0.1.1"
paste = "1.0.14"
once_cell = "1.18.0"
macro_rules_attribute = "0.2.0"
clap = { version = "4.4.10", features = ["derive", "string"] }
criterion = "0.5.1"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# There's a lot of casting between different numeric types in this project. In most cases the possible ranges of these are pretty well understood, and as such most of these concerns are unfounded and just add clutter.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[[bench]]
name = "main"
harness = false
