[package]
name = "aoc"
version = "0.0.0"
edition = "2021"

[features]
default = []
bench = ["dep:criterion"]
leaderboard = [
	"dep:chrono",
	"dep:serde",
	"dep:serde_json",
]

[dependencies]
# for bench
criterion = { version = "0.5.1", optional = true }

# for leaderboard
chrono = { version = "0.4.31", optional = true }
serde = { version = "1.0.193", optional = true, features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }

# main
ansi_term = "0.12.1"
aoc_derive = { path = "./aoc_derive" }
clap = { version = "4.4.10", features = ["derive", "string"] }
common_macros = "0.1.1"
derive-new = "0.5"
once_cell = "1.18.0"
paste = "1.0.14"
rayon = "1.8.0"
tap = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.0.0"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# There's a lot of casting between different numeric types in this project. In most cases the possible ranges of these are pretty well understood, and as such most of these concerns are unfounded and just add clutter.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[[bin]]
name = "leaderboard"
required-features = ["leaderboard"]

[[bench]]
name = "main"
harness = false
required-features = ["bench"]
