[package]
name = "aoc-wasm"
version = "0.0.0"
edition = "2021"

[features]
debug = ["dep:console_error_panic_hook"]

[dependencies]
aoc = { path = "../" }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.84"
wasm-bindgen-rayon = "1.1.3"
web-sys = { version = "0.3.66", features = [
	"Performance",
	"Window",
] }

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[lib]
crate-type = ["cdylib", "rlib"]
